@@ -1,6 +1,8 @@
 val Scala3Version = "3.1.2"
 
 ThisBuild / scalaVersion := Scala3Version
+ThisBuild / run / javaOptions += "--add-modules=jdk.incubator.vector"
+
 
 lazy val utils = (
   project.in(file("utils"))
@@ -19,6 +21,10 @@ def mkProject(name: String, path: String) = (
   .dependsOn(utils)
 )
 
+def mkBench(benchmarked: Project, path: String) = (
+  Project.apply(benchmarked.id + "-bench", file(path)).dependsOn(benchmarked).enablePlugins(JmhPlugin)
+)
+
 // adt --{
 lazy val adt1 = mkProject("adt1", "adt-compiler/adt-1")
 // }--
@@ -30,6 +36,9 @@ lazy val dot4 = mkProject("dot4", "dot/dot-4")
 lazy val dot5 = mkProject("dot5", "dot/dot-5")
 lazy val dot6 = mkProject("dot6", "dot/dot-6")
 lazy val dot7 = mkProject("dot7", "dot/dot-7")
+lazy val dot8 = mkProject("dot8", "dot/dot-8")
+
+lazy val dotBench = mkBench(dot8, "dot/benchmark")
 // }
 // power --{
 lazy val power1 = mkProject("pow1", "power/power-1")
